--- a/math154/work_fluid_forces.html
+++ b/math154/work_fluid_forces.html
@@ -150,8 +150,9 @@ $(function () {
 <div id="ex7" class="collapse">
   <img src="./triangletrough.png"><br>
   <ol>
-    <li>Assume the trough above is full of water and the dimensions are \(L=4, W=2, H=1\) meters. What is the work required to pump the water over the edge?
-    <li>What is the total force due to hydrostatic pressure on one end of the trough?
+    <li> Assume the trough above is full of water and the dimensions are \(L=4, W=2, H=1\) meters. 
+    <li> What is the work required to pump the water over the edge?
+    <li> What is the total force due to hydrostatic pressure on one end of the trough?
   </ol>
 </div>
 
@@ -163,8 +164,8 @@ $(function () {
     Assume the dam is only full to a depth of 200 meters. Answer the questions below.
   <ol>
     <li> What is the pressure at the base of the dam?
-    <li> What is the pressure on a arbitrary strip of the dam?
     <li> What is the relationship between force and pressure?
+    <li> What is the pressure on an arbitrary infinitesimal thick horizontal strip of the dam? the force?
     <li> What is the total force on the dam?
   </ol>
 </div>
