--- a/math154/work_fluid_forces.html
+++ b/math154/work_fluid_forces.html
@@ -102,7 +102,7 @@ $(function () {
   <iframe width="1132" height="637" src="https://www.youtube.com/embed/M3FYfcHWnXs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <P>Set up integrals and calculate the work done for the three parts of the Heavy Metal challenge.
-  Assume the chain is 30 feet long, weighs 350 pounds, with a 100 weight at the end.
+  Assume the chain is 30 feet long, weighs 350 pounds, with a 100 pound weight at the end.
   Assume the competitors walk up a ramp 30 feet long and 30 feet high along a 45 degree angle so there isn't excess chain to consider.
   Only consider work done to move the chain and weight vertically.
   <ul>
