--- a/math154/work_fluid_forces.html
+++ b/math154/work_fluid_forces.html
@@ -34,7 +34,8 @@ $(function () {
       <li> Find the work required to move a particle along a straight line from \(x=0\) to \(x=2\) with force \(F(x) = xe^{-3x}\).
       <li> A spring has a 20 cm natural length. What is the work required to stretch the spring to 30 cm long if \(k=2\) N/m?
       <li> Work of 3 Joules done in stretching a spring from its natural length to 14 cm beyond its natural length. What is the force (in Newtons) that holds the spring stretched at the same distance (14 cm)?
-      <!--<li> Set up an integral representing the fluid force on the end of a (full) trough with -->
+      <li> Find the hydrostatic force on a circular plate of radius 2 that is submerged 6 meters in the water.
+        <!--<li> Set up an integral representing the fluid force on the end of a (full) trough with -->
     </ol>
 
   </div>
