--- a/math154/centers_of_mass.html
+++ b/math154/centers_of_mass.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px; padding-left: 1cm" background="bg.jpg">
+  <body style="width: 800px; padding-left: 1cm" background="bg.jpg">
 
   <h1>Centers of mass examples</h1>
 
@@ -70,7 +70,7 @@ $(function () {
 <ol type='a'>
 <li> Sketch a picture of the situation.
 <li> What is the area of the lamina? When is area equivalent to mass in the centers of mass context?
-<li> The moment about the \(y-axis\) for this situation is given by \(M_y = \int_a^b x f(x) dx\). Explain what this formula is describing and why it is specific to this situation. (i.e. what could change that changes the formula?)
+<li> The moment about the \(y\)-axix for this situation is given by \(M_y = \int_a^b x f(x)~dx\). Explain what this formula is describing and why it is specific to this situation. (i.e. what could change that changes the formula?)
 <li> Calculate \(M_y\).
 <li> Use your explanation above to find a formula for \(M_x\).
 <li> Calculate the center of mass of the system.
