--- a/math154/dot_cross_product_examples.html
+++ b/math154/dot_cross_product_examples.html
@@ -29,7 +29,7 @@ $(function () {
 <h2>Warmup </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warm ups</button>
   <div id="ex0" class="collapse">
-    <P>Assume \(\vec{a} \neq \vec{0}\). Which of the following, if any, are true statements? If it is true, explain why. If not, can you come up with a counterexample that shows why not?
+    <P>Recall two vectors are orthogonal if the angle between them is \(\pi/2\) radians or \(90^\circ\) or if their dot product is zero. Let \(\vec{a},\vec{b},\vec{c}\in \mathbb{R}^3$. Assume \(\vec{a} \neq \vec{0}\). Which of the following, if any, are true statements? If it is true, explain why. If not, can you come up with a counterexample that shows why not?
       <ol>
       <li>If \(\vec{a} \cdot \vec{b} = \vec{a} \cdot \vec{c}\) then \(\vec{b} = \vec{c}\).
       <li>If \(\vec{a} \times \vec{b} = \vec{a} \times \vec{c}\) then \(\vec{b} = \vec{c}\).
