--- a/math154/dot_cross_product_intro.html
+++ b/math154/dot_cross_product_intro.html
@@ -6,7 +6,7 @@
 </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>MATH 154 integral examples</title>
+    <title>MATH 154 vector examples</title>
     <script src="https://sagecell.sagemath.org/static/jquery.min.js"></script>
     <script src="https://sagecell.sagemath.org/embedded_sagecell.js"></script>
     <script>
