--- a/math154/vvf.html
+++ b/math154/vvf.html
@@ -32,6 +32,8 @@ $(function () {
     <ol>
       <li> Find the unit tangent vector to the curve \( \vec{r}(t) = \begin{bmatrix}1 + \cos(t)\\ 2- \sin(6t) \end{bmatrix}\) when \(t=\pi/6\).
       <li> True or False. The points \(A(-1,0,1), B(1,1,-1), C(1,1,1)\) form a right triangle.
+      <li> True or False. If the planes \(P_1\) and \(P_2\) are both perpendicular to plane \(P_3\), then \(P_1\) must be perpendicular to \(P_2\).
+      <li> True or False. If the planes \(P_1\) and \(P_2\) are both parallel to a line \(L\), then \(P_1\) and \(P_2\) must be parallel to each other.
     </ol>
  </div>
 
