--- a/other/quests/quest3/start.html
+++ b/other/quests/quest3/start.html
@@ -1,11 +1,22 @@
 <html>
 
 <head>
-<title>Nora beanie boo birthday quest</title>
+<title>Beanie Boo Quest</title>
+
 </head>
 
 <body>
-Start text
 
+<h2>Nora's Beanie Boo Birthday Quest!</h2>
+
+<P>Your beanie boos hid and made you a quest.
+<P>You'll find us all fast because you're the best!
+<P>To begin click the start button below.<br>
+  <img src="./beanies_start.jpg" height=400 width=400>
+<br><br>
+<form method="get" action="twigs.html">
+    <button type="submit">Start!</button>
+</form>
+</form>
 </body>
 </html>
