--- a/other/quests/quest3/dotty.html
+++ b/other/quests/quest3/dotty.html
@@ -19,11 +19,11 @@ document.getElementById('error').innerHTML='Try Again!';
 <img src="./dotty.gif" height=400 width=400><br><br>
 <P>If you stare at my bold colored spots,<br>
 They might start to look like big crazy spots!<br><br>
-<P>In the side yard you'll find 9 eggs. One has Dotty, others have letters and codes to the next Beanie Boo.
+<P>In the side yard you'll find 8 eggs. One has Dotty, others have letters. Unscramble the letters to find the next Beanie Boo.
 <P>Once you find Dotty and the next Beanie Boo enter her name for the next steps.
 <br><br>
 <form name="answerForm" onSubmit="solve(this); return false;">
-<h2>Enter the next Benie Boo code : <input name="answer" type="text" size="10" maxlength="20"/>
+<h2>Enter the next Benie Boo name : <input name="answer" type="text" size="10" maxlength="20"/>
 <input value="Submit" type="submit />
 </form>
 </body>
