--- a/other/quests/quest3/n1.html
+++ b/other/quests/quest3/n1.html
@@ -4,7 +4,7 @@
 <title>Beanie Boo Quest</title>
 <script type="text/javascript" language="javascript">
 function solve(f){
-if (f.answer.value.toLowerCase()=='pocket')
+if (f.answer.value.toLowerCase()=='garter')
 window.location = 'n2.html';
 else
 document.getElementById('error').innerHTML='Try Again!';
@@ -14,7 +14,7 @@ document.getElementById('error').innerHTML='Try Again!';
 </head>
 
 <P>Find the next Beanie Boo where this picture was taken!<br>
-<img src="./p1.jpg" height=400 >
+<img src="./p1n.jpg" height=400 >
 <br><br>
 <form name="answerForm" onSubmit="solve(this); return false;">
 <h2>Enter the Beanie Boo name : <input name="answer" type="text" size="10" maxlength="20"/>
