--- a/other/quests/quest3/n2.html
+++ b/other/quests/quest3/n2.html
@@ -14,7 +14,7 @@ document.getElementById('error').innerHTML='Try Again!';
 </head>
 
 <P>Find the next Beanie Boo where this picture was taken!<br>
-<img src="./p2.jpg" height=400 >
+<img src="./p2n.jpg" height=400 >
 <br><br>
 <form name="answerForm" onSubmit="solve(this); return false;">
 <h2>Enter the Beanie Boo name : <input name="answer" type="text" size="10" maxlength="20"/>
