--- a/other/quests/quest3/n3.html
+++ b/other/quests/quest3/n3.html
@@ -4,8 +4,8 @@
 <title>Beanie Boo Quest</title>
 <script type="text/javascript" language="javascript">
 function solve(f){
-if (f.answer.value.toLowerCase()=='garter')
-window.location = 'end.html';
+if (f.answer.value.toLowerCase()=='dotty')
+window.location = 'n4.html';
 else
 document.getElementById('error').innerHTML='Try Again!';
 }
@@ -14,7 +14,7 @@ document.getElementById('error').innerHTML='Try Again!';
 </head>
 
 <P>Find the next Beanie Boo where this picture was taken!<br>
-<img src="./p3.jpg" height=400 >
+<img src="./p3n.jpg" height=400 >
 <br><br>
 <form name="answerForm" onSubmit="solve(this); return false;">
 <h2>Enter the Beanie Boo name : <input name="answer" type="text" size="10" maxlength="20"/>
