--- a/other/quests/quest3/n1.html
+++ b/other/quests/quest3/n1.html
@@ -4,7 +4,7 @@
 <title>Beanie Boo Quest</title>
 <script type="text/javascript" language="javascript">
 function solve(f){
-if (f.answer.value.toLowerCase()=='garter')
+if (f.answer.value.toLowerCase()=='pocket')
 window.location = 'n2.html';
 else
 document.getElementById('error').innerHTML='Try Again!';
