--- a/other/quests/quest3/n3.html
+++ b/other/quests/quest3/n3.html
@@ -4,8 +4,8 @@
 <title>Beanie Boo Quest</title>
 <script type="text/javascript" language="javascript">
 function solve(f){
-if (f.answer.value.toLowerCase()=='dotty')
-window.location = 'n4.html';
+if (f.answer.value.toLowerCase()=='garter')
+window.location = 'end.html';
 else
 document.getElementById('error').innerHTML='Try Again!';
 }
