--- a/math154/index.html
+++ b/math154/index.html
@@ -26,12 +26,16 @@ $(function () {
 <ul>
   <li><a href="./calc1review.html">calc1review.html</a>
   <li><a href="./DEs_calc2.html">DEs_calc2.html</a>
+  <li><a href="./dot_cross_product_intro.html">dot_cross_product_intro.html</a>
   <li><a href="./dot_cross_product_examples.html">dot_cross_product_examples.html</a>
   <li><a href="./exam3review.html">exam3review.html</a>
   <li><a href="./exam4review.html">exam4review.html</a>
   <li><a href="./exp_log.html">exp_log.html</a>
   <li><a href="./integral_examples.html">integral_examples.html</a>
+  <li><a href="./more_integral_examples.html">more_integral_examples.html</a>
+  <li><a href="./work_fluid_forces.html">work_fluid_forces.html</a>
   <li><a href="./integral_patterns.html">integral_patterns.html</a>
+  <li><a href="./centers_of_mass.html">centers_of_mass.html</a>
   <li><a href="./newtonsmethod.html">newtonsmethod.html</a>
   <li><a href="./num_integration.html">num_integration.html</a>
   <li><a href="./inverses.html">inverses.html</a>
