--- a/math154/dot_cross_product_intro.html
+++ b/math154/dot_cross_product_intro.html
@@ -93,6 +93,16 @@ $(function () {
   What is the torque applied?
 
 </div>
+  
+  <h2>Example 6 - Track </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
+<div id="ex6" class="collapse">
+  A 100-meter dash is run on a track heading northeasterly. If the wind is blowing out
+of the south at a speed of 8 km/hr. The rules say that a legal wind speed measured in
+the direction of the dash must not exceed 5 km/hr. Will the race results be disqualified
+due to an illegal wind?
+  </div>
+
 <br>
 <br>
 <br>
