--- a/math154/dot_cross_product_intro.html
+++ b/math154/dot_cross_product_intro.html
@@ -76,7 +76,7 @@ $(function () {
   <li> \(\vec{a} \times \vec{b} = |\vec{a}||\vec{b}|\sin(\theta) \hat{n} \)
   <li> \(\vec{a} \times \vec{b} \) is orthogonal to both \(\vec{a}\) and \(\vec{b}\).
   <li> \(\vec{a} \times \vec{b} = -\vec{b} \times \vec{a} \)
-  <li> \(\vec{a} \times \vec{b} = (r\vec{a}) \times \vec{b} = \vec{a} \times (r \vec{b})\)
+  <li> \(r (\vec{a} \times \vec{b}) = (r\vec{a}) \times \vec{b} = \vec{a} \times (r \vec{b})\)
   <li> \(\vec{a} \times (\vec{b} + \vec{c}) = \vec{a} \times \vec{b} + \vec{a} \times \vec{c}\)
   <li> \((\vec{a} + \vec{b}) \times \vec{c} = \vec{a} \times \vec{c} + \vec{b} \times \vec{c}\)
   <li> \(\vec{a} \times \vec{b} \times \vec{c} = \vec{b} (\vec{a}\cdot\vec{c}) - \vec{c}(\vec{a}\cdot\vec{b})\)
