--- a/math154/3dplots.html
+++ b/math154/3dplots.html
@@ -48,6 +48,14 @@ def _(f = input_box(f, label='z = f(x,y) = ', width='20')):
     </div>
  <!--</div>-->
  <ol type='1'>
+ <li>The set of points whose distance from the z-axis equals the distance from the xy-plane
+describes a 
+   <ol type='a'>
+    <li>Plane
+    <li>Cylinder
+    <li>Sphere
+    <li>Cone
+   </ol>
  <li>Consider the function \(f(x,y) = x^2 + y^2\).
      <ol type='i'>
        <li>What is the domain and range of \(f\)?
@@ -75,6 +83,13 @@ def _(f = input_box(f, label='z = f(x,y) = ', width='20')):
      <li>Can you put these together to make a sketch of the surface \(z=f(x,y)\)? Check your sketch with the applet above.
      </ol>
 <li>Consider the function \(w=f(x,y,z) = x^2 + 3y^2 + 5z^2\). Sketch the level sets of this function for \(w=1,5,10\). How would you describe them?
+<li>Level surfaces of the function \(f(x, y, z) = \sqrt{x^2 + x^2}\) are
+ <ol type='a'>
+   <li>Circles centered at the origin
+    <li>Spheres centered at the origin
+    <li>Cylinders centered around the z-axis
+    <li>Upper-hemispheres centered at the origin
+  </ol>
 <li>Consider the function \(w=f(x,y,z) = \sqrt{z - x^2 - y^2} \). Describe the domain and level sets for this function.
 <li>Suppose on a particular day the fraction of students with the flu is \(r, (0 \le r \le 1)\). If you have \(n\) random encounters with students during the day,
   the probability of interacting  with at least one student with the flu is \(P = 1 - (1-r)^n\). Explain the picture below in the context of the problem and using vocabulary from this lesson.
