--- a/math154/3dplots.html
+++ b/math154/3dplots.html
@@ -55,6 +55,7 @@ describes a
     <li>Cylinder
     <li>Sphere
     <li>Cone
+    <li>Double cone (two cones joined at their vertices)
    </ol>
  <li>Consider the function \(f(x,y) = x^2 + y^2\).
      <ol type='i'>
