--- a/math154/3dplots.html
+++ b/math154/3dplots.html
@@ -66,7 +66,7 @@ describes a
        <li>Can you put these together to make a sketch of the surface \(z=f(x,y)\)? Check your sketch with the applet above.
        </ol>
 
- <li>Consider the function \(f(x,y) = \sqrt{3x + 4x -12}\). Find and sketch the domain of this function.
+ <li>Consider the function \(f(x,y) = \sqrt{3x + 4y -12}\). Find and sketch the domain of this function.
 
  <li>Consider the function \(f(x,y) = ye^x\).
            <ol type='i'>
@@ -84,7 +84,7 @@ describes a
      <li>Can you put these together to make a sketch of the surface \(z=f(x,y)\)? Check your sketch with the applet above.
      </ol>
 <li>Consider the function \(w=f(x,y,z) = x^2 + 3y^2 + 5z^2\). Sketch the level sets of this function for \(w=1,5,10\). How would you describe them?
-<li>Level surfaces of the function \(f(x, y, z) = \sqrt{x^2 + x^2}\) are
+<li>Level surfaces of the function \(f(x, y, z) = \sqrt{x^2 + y^2}\) are
  <ol type='a'>
    <li>Circles centered at the origin
     <li>Spheres centered at the origin
