--- a/math154/3dplots.html
+++ b/math154/3dplots.html
@@ -112,7 +112,7 @@ show(cp)
     <li>\(\displaystyle \lim_{(x,y)\to(0,0)} \frac{x^2 \sin^2(y)}{x^2 + 2y^2} \)<br><br>
     <li>\(\displaystyle \lim_{(x,y)\to(0,0)} (x^2 + y^2) \ln (x^2 + y^2) \)<br><br>
     </ol>
-<li>Where is \(f(x,y) = \tan (2x + \sqrt{y})\) continuous?<br><br>
+<li>Where is \(f(x,y) = \tan^{-1} (2x + \sqrt{y})\) continuous?<br><br>
 <li>Let \(f:\mathbb{R}^2\to\mathbb{R}\) be given below. What value of \(c\) makes \(f\) continuous at \((0,0)\)?
   $$f(x,y) = \begin{cases} \frac{x^2 \sin^2(y)}{x^2 + 2y^2}, & (x,y) \neq (0,0)\\
   c, & (x,y) = (0,0) \end{cases}
