--- a/math154/partial_derivatives.html
+++ b/math154/partial_derivatives.html
@@ -102,7 +102,7 @@ def _(T = input_box(T, label='T = ', width='30'),R = input_box(R, label='R = ', 
 </div>
 
 <h2>Example - Heat equation </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example 3</button>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example</button>
 <div id="ex3" class="collapse">
     <P>Let's show that \(u(x,t) = 10e^{-t}\sin(x)\) solves the 1D heat equation \( Du_{xx} = u_t\). \(D\) is the constant of heat diffusion. Let \(D=1\) for this example.
     <ol>
@@ -110,6 +110,19 @@ def _(T = input_box(T, label='T = ', width='30'),R = input_box(R, label='R = ', 
       <li>Calculate \(u_x\).
       <li>Calculate \(u_{xx}\).
       <li>Substitute into the heat equation and show that \(u\) is a solution.
+      </ol>
+
+</div>
+
+<h2>Example - implicit partial derivatives </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example</button>
+<div id="ex4" class="collapse">
+    <P>Suppose we have a surface defined implicitly, \(F(x,y,z) = 0\). We can calculate partial derivatives \(z_x = \frac{\partial z}{\partial x}\) through implicit differentiation.
+      $$z_x = \frac{\partial z}{\partial x} = \frac{F_x}{F_z}$$
+      $$z_y = \frac{\partial z}{\partial y} = \frac{F_y}{F_z}$$
+    <ol>
+      <li>Rewrite the formulas above using Leibnitz notation (fraction representation of derivatives) and explain the formulas.
+      <li>Let \(F(x,y,z) = x^2y + y^2 z + xz^2 = 0\). Find \(z_x\).
       </ol>
 
 </div>
