--- a/math154/partial_derivatives.html
+++ b/math154/partial_derivatives.html
@@ -118,10 +118,9 @@ def _(T = input_box(T, label='T = ', width='30'),R = input_box(R, label='R = ', 
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example</button>
 <div id="ex4" class="collapse">
     <P>Suppose we have a surface defined implicitly, \(F(x,y,z) = 0\). We can calculate partial derivatives \(z_x = \frac{\partial z}{\partial x}\) through implicit differentiation.
-      $$z_x = \frac{\partial z}{\partial x} = \frac{F_x}{F_z}$$
-      $$z_y = \frac{\partial z}{\partial y} = \frac{F_y}{F_z}$$
+      $$z_x = \frac{\partial z}{\partial x} = -\frac{F_x}{F_z}$$
+      $$z_y = \frac{\partial z}{\partial y} = -\frac{F_y}{F_z}$$
     <ol>
-      <li>Rewrite the formulas above using Leibnitz notation (fraction representation of derivatives) and explain the formulas.
       <li>Let \(F(x,y,z) = x^2y + y^2 z + xz^2 = 0\). Find \(z_x\).
       </ol>
 
