--- a/math154/partial_derivatives.html
+++ b/math154/partial_derivatives.html
@@ -86,6 +86,7 @@ def _(T = input_box(T, label='T = ', width='30'),R = input_box(R, label='R = ', 
    <div id="ex1" class="collapse">
      <ol type='a'>
          <li>Find \(f_x\) for \(f(x,y) = \ln \left(x^3 + xy^2 - 3y\right) \).
+         <li>Find \(h_x\) and \(h_y\) for \(h(x,y) = \sin^2 ( \sqrt{xy} \).
          <li>Find all first order partials (\(g_x,g_y,g_z,g_t\)) for \(g(x,y,z,t) = \frac{xy^2}{t + 2z} \).
      </ol>
  </div>
