--- a/math154/tangent_planes.html
+++ b/math154/tangent_planes.html
@@ -16,7 +16,7 @@
                            evalButtonText: 'Activate'});
     // Make *any* div with class 'compute' a Sage cell
     sagecell.makeSagecell({inputLocation: 'div.compute',
-                           evalButtonText: 'Evaluate'});
+                           evalButtonText: 'Plotting tool'});
     });
     </script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -57,6 +57,26 @@
          <li>\( \displaystyle z = f(x,y) = 32 - 3x^2 - 4y^2\) at point (2,1,16)
      </ol>
  </div>
+ 
+<div class="compute">
+<script type="text/x-sage">
+from sage.manifolds.utilities import set_axes_labels
+from sage.plot.plot3d.plot3d import axes
+# everything following hash symbol is comment
+var('x y')
+f = x^2 + y
+@interact
+def _(f = input_box(f, label='z = f(x,y) = ', width='20')):
+  pretty_print(html('$z = f(x,y)\;=\;%s$'%latex(f)))
+  w = plot3d(f,(x,-5,5),(y,-5,5), frame=True, color='purple', opacity=0.8)
+  set_axes_labels(w,'x','y','z')
+  S = axes(2,0.5)
+  tx = text3d('x',(2,0,0))
+  ty = text3d('y',(0,2,0))
+  tz = text3d('z',(0,0,2))
+  show(w+S+tx+ty+tz)
+</script>
+</div>
 
  <h2>Linear Approximation in 2D </h2>
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
