--- a/math154/tangent_planes.html
+++ b/math154/tangent_planes.html
@@ -13,18 +13,18 @@
     // Make the div with id 'mycell' a Sage cell
     sagecell.makeSagecell({inputLocation:  'div.mycell',
                            template:       sagecell.templates.minimal,
-                           evalButtonText: 'Plotting tool'});
+                           evalButtonText: 'Activate'});
     // Make *any* div with class 'compute' a Sage cell
     sagecell.makeSagecell({inputLocation: 'div.compute',
-                           evalButtonText: 'Plotting tool'});
+                           evalButtonText: 'Evaluate'});
     });
     </script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px; padding-left: 1cm" background="bg.jpg">
+  <body style="width:750px; padding-left: 1cm" background="bg.jpg">
 
-  <h1>Tangent Planes</h1>
+  <h1>Tangent Planes and the Chain Rule</h1>
 
 <hr>
 
@@ -37,6 +37,7 @@
       <li>True or False. If \( \frac{\partial f}{\partial x} = \frac{\partial f}{\partial y}\) everywhere, then \(f(x, y)\) is constant.<br><br>
       <li>True or False. \(f = x^{0.4}y^{0.6}\) solves Euler's equation \(xf_x + yf_y = f\).<br><br>
       <li>True or False. \(f = x+y+1\) solves Euler's equation \(xf_x + yf_y = f\).<br><br>
+      <li><img src="./tangentplane_graphs.png" width=800><br><br>
     </ol>
 
     </div>
@@ -57,26 +58,6 @@
          <li>\( \displaystyle z = f(x,y) = 32 - 3x^2 - 4y^2\) at point (2,1,16)
      </ol>
  </div>
- 
-<div class="mycell">
-<script type="text/x-sage">
-from sage.manifolds.utilities import set_axes_labels
-from sage.plot.plot3d.plot3d import axes
-# everything following hash symbol is comment
-var('x y')
-f = x^2 + y
-@interact
-def _(f = input_box(f, label='z = f(x,y) = ', width='20')):
-  pretty_print(html('$z = f(x,y)\;=\;%s$'%latex(f)))
-  w = plot3d(f,(x,-5,5),(y,-5,5), frame=True, color='purple', opacity=0.8)
-  set_axes_labels(w,'x','y','z')
-  S = axes(2,0.5)
-  tx = text3d('x',(2,0,0))
-  ty = text3d('y',(0,2,0))
-  tz = text3d('z',(0,0,2))
-  show(w+S+tx+ty+tz)
-</script>
-</div>
 
  <h2>Linear Approximation in 2D </h2>
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
@@ -122,18 +103,66 @@ def _(f = input_box(f, label='z = f(x,y) = ', width='20')):
 
 </div>
 
-<!--<h2>Example - implicit partial derivatives </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example</button>
-<div id="ex4" class="collapse">
-    <P>Suppose we have a surface defined implicitly, \(F(x,y,z) = 0\). We can calculate partial derivatives \(z_x = \frac{\partial z}{\partial x}\) through implicit differentiation.
-      $$z_x = \frac{\partial z}{\partial x} = -\frac{F_x}{F_z}$$
-      $$z_y = \frac{\partial z}{\partial y} = -\frac{F_y}{F_z}$$
-    <ol>
-      <li>Let \(F(x,y,z) = x^2y + y^2 z + xz^2 = 0\). Find \(z_x\).
-      </ol>
+<h2>Example - Ski mountain </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4mtn">Example</button>
+<div id="ex4mtn" class="collapse">
+    <img src="./mountainsketch.png" width=400><br><br>
+    <P> Consider skiing on the mountain above with \(z\) representing elevation and the black curve representing the path taken. How does elevation change with respect to time?
+
+      <ol>
+        <li>Consider a new simpler mountain given by \(z = e^{-x^2 -y^2}\) and ski path given by \(x(t) = 1 - e^{-t}, y(t) = -t^4 + t^2\). Find \(\frac{dz}{dt}\).
+          <li>What is the slope when \(t = 2\)?
+          <li>What if the path were \(x(t) = \cos t, y(t) = \sin t\)? Find \(\frac{dz}{dt}\). Interpret your solution.
+          </ol>
 
 </div>
--->
+
+
+<h2>Example - chain rule </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example</button>
+<div id="ex4" class="collapse">
+    <img src="./mvchainrule_graphs.png" width=800><br><br>
+
+</div>
+
+<h2>Example - more chain rule </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4m">Example</button>
+<div id="ex4m" class="collapse">
+    <P> Let \(z\equiv z(x,y), x\equiv x(s,t), y \equiv y(s,t)\). We can't find \(\frac{dz}{ds}\). We need to find \(\frac{\partial z}{\partial s}\).
+      Come up with a formula for \(\frac{\partial z}{\partial s}\).
+      <ol>
+        <li>Example. \(\displaystyle z = e^x \sin y\) with \(x = st^2, y=s^2t\). Find \(\frac{\partial z}{\partial s}\) and \(\frac{\partial z}{\partial t}\).
+        </ol>
+</div>
+
+<h2>Example - implicit partial derivatives </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example</button>
+<div id="ex5" class="collapse">
+    <P>Consider \(\sin(xy) + \pi y^2 - x = 0\).
+      <ol>
+        <li>Use implicit differentiation to find \(\frac{dy}{dx}\).
+        <li>Now let \(F(x,y) = \sin(xy) + \pi y^2 - x = 0\) or simply \(F(x,y) = 0\). Implicitly differentiate with respect to \(x\) and solve for \(\frac{dy}{dx}\).
+        <li>Try the same thing but with \(G(x,y) = x^2 - 2y^2 - 1 = 0\) implicitly differentiate to find \(\frac{dy}{dx}\).
+        </ol>
+        <br>
+    <p> What if we have \(F(x,y,z) = 0\) instead? What changes?
+      <ol>
+        <li>Assume \(z\equiv z(x,y)\). Implicitly differentiate with respect to \(x\) (need partial derivatives now) and solve for \(\frac{\partial x}{\partial x}\).
+        <li>Find \(\frac{\partial x}{\partial x}\) if \(z(x,y)\) is defined implicitly by \(xy + xz + yz = 3\).
+        </ol>
+
+</div>
+
+<h2>Example - fluid flow </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example</button>
+<div id="ex6" class="collapse">
+    <img src="./vectorfield1.png" width=300><br>
+    <P>Consider the fluid flow field above. \(u\) is the fluid velocity in the \(x\) direction, and \(v\) is the fluid velocity in the \(y\) direction.
+      Then the flow velocity vector is \(\displaystyle \vec{u} = \begin{bmatrix}u \\ v \end{bmatrix}\). The speed of the flow is given by \(\displaystyle s = \sqrt{u^2 + v^2}\).
+      For the flow above we have \(u (x,y) = 2y\) and \(v = -2x\). How does the fluid speed change with respect to \(x\)? \(y\)?
+
+
+</div>
 
 <br>
 <br>
