--- a/math154/tangent_planes.html
+++ b/math154/tangent_planes.html
@@ -138,7 +138,7 @@
 <h2>Example - implicit partial derivatives </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example</button>
 <div id="ex5" class="collapse">
-    <P>Consider \(\sin(xy) + \pi y^2 - x = 0\).
+    <P>Consider \(\sin(xy) + \pi y^2 - x = 0\). This defines a curve \(y\equivy(x)\) implicitly.
       <ol>
         <li>Use implicit differentiation to find \(\frac{dy}{dx}\).
         <li>Now let \(F(x,y) = \sin(xy) + \pi y^2 - x = 0\) or simply \(F(x,y) = 0\). Implicitly differentiate with respect to \(x\) and solve for \(\frac{dy}{dx}\).
@@ -147,8 +147,8 @@
         <br>
     <p> What if we have \(F(x,y,z) = 0\) instead? What changes?
       <ol>
-        <li>Assume \(z\equiv z(x,y)\). Implicitly differentiate with respect to \(x\) (need partial derivatives now) and solve for \(\frac{\partial x}{\partial x}\).
-        <li>Find \(\frac{\partial x}{\partial x}\) if \(z(x,y)\) is defined implicitly by \(xy + xz + yz = 3\).
+        <li>Assume \(z\equiv z(x,y)\). Implicitly differentiate with respect to \(x\) (need partial derivatives now) and solve for \(\frac{\partial z}{\partial x}\).
+        <li>Find \(\frac{\partial z}{\partial x}\) if \(z(x,y)\) is defined implicitly by \(xy + xz + yz = 3\).
         </ol>
 
 </div>
