--- a/math154/MVoptimization.html
+++ b/math154/MVoptimization.html
@@ -91,6 +91,13 @@ def _(f = input_box(f, label='z = f(x,y) = ', width='20')):
      </ol>
  </div>
 
+ <h2>Critical points </h2>
+ <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#excp">Example</button>
+ <div id="excp" class="collapse">
+   <P>Find the critical points of \(f(x,y) = 4x - 3x^3 - 2xy^2\).
+   </div>
+    
+    
  <h2>Shipping boxes </h2>
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example</button>
  <div id="ex2" class="collapse">
