--- a/math154/MVoptimization.html
+++ b/math154/MVoptimization.html
@@ -101,7 +101,7 @@ def _(f = input_box(f, label='z = f(x,y) = ', width='20')):
  <h2>Shipping boxes </h2>
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example</button>
  <div id="ex2" class="collapse">
-   <P>A shipping company ships requires that the rectangular boxes they ship have the sum of the length, width, and height is at most 96 inches.
+   <P>A shipping company ships requires that the rectangular boxes they ship have the sum of the length, width, and height at most 96 inches.
      What is the box with the largest volume able to be shipped? (Yes - it is a cube. Show this using the ideas from multivariable optimization.)
    </div>
 
