--- a/Math123/linearprogramming.html
+++ b/Math123/linearprogramming.html
@@ -81,7 +81,7 @@
   <ol>
     <li>If it costs \$400 per hour to operate the West Summit mine and \$600 to operate the North Ridge mine, how many hours should each mine be operated to supply the required amounts of ore and minimize production costs? What is the minimum production cost?
     <li>Discuss the effect on the production schedule and the minimum production cost if it costs \$300 per hour to operate West Summit and $700 per hour to operate North Ridge. Assume everything else stays the same.
-    <li>What if it cost $800 per hour to operate West Summit and $200 per hour to operate North Ridge?
+    <li>What if it cost \$800 per hour to operate West Summit and \$200 per hour to operate North Ridge?
     </ol>
 </div>
 
@@ -99,7 +99,7 @@
 
 <h2>Example - Syrup Manufacturing</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exsm">Example</button>
-  <div id="exnsm" class="collapse">
+  <div id="exsm" class="collapse">
     <P>A syrup manufacturer blends 14 gallons of maple syrup and 18 gallons of corne syrup to make Maple Flavored Syrup and Taste O' Maple syrup.
       Each gallon of Maple Flavored Syrup has 0.3 gallons of corn syrup and 0.4 gallons of maple syrup.
       Each gallon of Taste O' Maple has 0.4 gallons of corn syrup and 0.2 gallons of maple syrup.
