--- a/Math123/linearprogramming.html
+++ b/Math123/linearprogramming.html
@@ -60,6 +60,17 @@
   $$x \geq 0, y \geq 0. $$
 </div>
 
+ <h2>Example</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2a">Example</button>
+  <div id="ex2a" class="collapse">
+<p>Find the maximum of
+  $$P = 3x + 2y$$
+   subject to the constraints
+  $$2x + 3y \leq 12$$
+  $$2x + y \leq 8$$
+  $$x \geq 0, y \geq 0. $$
+</div>
+    
 <h2>Example - Conference planning</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example</button>
   <div id="ex3" class="collapse">
