--- a/Math123/linearprogramming.html
+++ b/Math123/linearprogramming.html
@@ -32,14 +32,14 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example1">Example 1</button>
   <div id="example1" class="collapse">
  <P> The maximum daily production of an oil refinery is 2300 barrels. It makes 3 kinds of fuel: gasoline, diesel, and heating oil.
-   Gasoline has a production cost of $6 per barrel. Diesel has a production cost of $5 per barrel, and heating oil has a production cost of $8 per barrel.
-   The daily production budget is $16400. Can you write inequalities governing the number of barrels of each fuel produced?
+   Gasoline has a production cost of \$6 per barrel. Diesel has a production cost of \$5 per barrel, and heating oil has a production cost of $8 per barrel.
+   The daily production budget is \$16400. Can you write inequalities governing the number of barrels of each fuel produced?
 </div>
 
 <h2>Example Novelty Store</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exns">Example</button>
   <div id="exns" class="collapse">
-    <P>Ace Novelty wishes to produce two types of souveniers, A and B. Each type A souvenier has a profit of $1 and each type B $1.20.
+    <P>Ace Novelty wishes to produce two types of souveniers, A and B. Each type A souvenier has a profit of \$1 and each type B \$1.20.
       To manufacture a type A souvenier requires 2 minutes on machine I and 1 minute on machine II.
       To make a type B requires 1 minute on machine I and 3 minutes on machine II.
       There are 3 hours available on machine I and 5 hours on machine II.
@@ -69,6 +69,7 @@
   $$2x + 3y \leq 12$$
   $$2x + y \leq 8$$
   $$x \geq 0, y \geq 0. $$
+  <P>What if we wanted to maximize \(P = 5x + 2y\)?
 </div>
     
 <h2>Example - Conference planning</h2>
@@ -76,7 +77,7 @@
   <div id="ex3" class="collapse">
 <p> The Mathematical Association of America (MAA) plans a 3-day conference at a big hotel with many conference rooms.
   The conference knows that they need 15 rooms for the first day, 28 for the second day, and 19 for the thrid day.
-  The hotel rents rooms at a rate of $17 per room for a single day rental, or $30 to rent a room for consecutive days.
+  The hotel rents rooms at a rate of \$17 per room for a single day rental, or \$30 to rent a room for consecutive days.
   Can you set up a linear programming problem to figure out how the MAA should rent rooms to minimize the rental cost?
   You do not need to find a solution. (hint: think about how many ways there are to rent rooms for a single day and consecutive days.)
 </div>
@@ -90,9 +91,9 @@
   To satisfy existing orders, the company needs at least 100 tons of low-grade ore, 60 tons of medium-grade ore, and 80 tons of high-grade ore.
   The cost of operating each mine varies, depending on the conditions encountered while extracting the ore.
   <ol>
-    <li>If it costs $400 per hour to operate the West Summit mine and $600 to operate the North Ridge mine, how many hours should each mine be operated to supply the required amounts of ore and minimize production costs? What is the minimum production cost?
-    <li>Discuss the effect on the production schedule and the minimum production cost if it costs $300 per hour to operate West Summit and $700 per hour to operate North Ridge. Assume everything else stays the same.
-    <li>What if it cost $800 per hour to operate West Summit and $200 per hour to operate North Ridge?
+    <li>If it costs \$400 per hour to operate the West Summit mine and \600 to operate the North Ridge mine, how many hours should each mine be operated to supply the required amounts of ore and minimize production costs? What is the minimum production cost?
+    <li>Discuss the effect on the production schedule and the minimum production cost if it costs \$300 per hour to operate West Summit and \700 per hour to operate North Ridge. Assume everything else stays the same.
+    <li>What if it cost \$800 per hour to operate West Summit and \200 per hour to operate North Ridge?
     </ol>
 </div>
 
@@ -102,9 +103,9 @@
 <p>  A manufacturing company makes two types of water skis, a trick ski and a slalom ski. Trick skis require 6 hours of fabricating work and 1 hour of finishing work.
   Slalom skis require 4 hours of fabricating and 1 hour of finishing. There are 108 labor hours avaiable for fabrication and 24 available for finishing each day.
   <ol>
-    <li>If the profit on a trick ski is $40 and the profit on a slalom ski is $30, how many of each type of ski should be made each day to realize a maximum profit? What is this profit?
-    <li>Discuss the effect of having the profit on a slalom ski decrease to $25.
-    <li>Discuss the effect of having the profit on a slalom ski increase to $45.
+    <li>If the profit on a trick ski is \$40 and the profit on a slalom ski is \$30, how many of each type of ski should be made each day to realize a maximum profit? What is this profit?
+    <li>Discuss the effect of having the profit on a slalom ski decrease to \$25.
+    <li>Discuss the effect of having the profit on a slalom ski increase to \$45.
     </ol>
 </div>
 
@@ -115,7 +116,7 @@
       Each gallon of Maple Flavored Syrup has 0.3 gallons of corn syrup and 0.4 gallons of maple syrup.
       Each gallon of Taste O' Maple has 0.4 gallons of corn syrup and 0.2 gallons of maple syrup.
       Water and other stuff make up the rest of each gallon.
-      The company makes a profit of $4.50 per gallon of Maple Flavored Syrup and $3.00/gal Taste O' Maple.
+      The company makes a profit of \$4.50 per gallon of Maple Flavored Syrup and \$3.00/gal Taste O' Maple.
       How many gallons of each should they make to maximize profit?
 
       <P><b>Bonus</b> How much should the company spend to buy another gallon of maple syrup?
