--- a/Math123/linearprogramming.html
+++ b/Math123/linearprogramming.html
@@ -25,6 +25,7 @@
   <body style="width:750px; padding-left: 1cm" background="bg.jpg">
 
   <h1>Linear Programming Problems</h1>
+    <P>There are videos on the course <a href="https://uwsto.instructure.com/courses/202177/pages/linear-programming-videos?module_item_id=3345836">Canvas page</a>
 
 <hr>
 
